WIP: Testing stats

--- a/scripts/doc/Makefile
+++ b/scripts/doc/Makefile
@@ -229,6 +229,9 @@ install:
 	# history prior to the last commit
 	# -b gh-pages fetches only the branch for the gh-pages
 	git clone -b gh-pages --single-branch --no-checkout --depth 1 https://github.com/mne-tools/mne-biomag-group-demo _build/mne-biomag-group-demo.github.io
+	@make install-files
+
+install-files:
 	touch _build/mne-biomag-group-demo.github.io/.nojekyll
 	cd _build/ && \
 	cp -r html/* mne-biomag-group-demo.github.io && \
@@ -238,17 +241,15 @@ install:
 	git commit -a -m 'Make install' && \
 	git push
 
+install-pr-user-ssh:
+	rm -rf _build/mne-biomag-group-demo.github.io
+	git clone -b gh-pages --single-branch --no-checkout --depth 1 git@github.com:/$(USER)/mne-biomag-group-demo _build/mne-biomag-group-demo.github.io
+	@make install-files
+
 install-pr-user:
 	rm -rf _build/mne-biomag-group-demo.github.io
-	git clone -b gh-pages --single-branch --no-checkout --depth 1 https://github.com:/$(USER)/mne-biomag-group-demo _build/mne-biomag-group-demo.github.io
-	touch _build/mne-biomag-group-demo.github.io/.nojekyll
-	cd _build/ && \
-	cp -r html/* mne-biomag-group-demo.github.io && \
-	cd mne-biomag-group-demo.github.io && \
-	git add * && \
-	git add .nojekyll && \
-	git commit -a -m 'Make install' && \
-	git push
+	git clone -b gh-pages --single-branch --no-checkout --depth 1 git@github.com:/$(USER)/mne-biomag-group-demo _build/mne-biomag-group-demo.github.io
+	@make install-files
 
 install-noplot:
 	rm -rf _build/doctrees _build/mne-biomag-group-demo.github.io
